footer spacing fixed

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,5 +1,6 @@
 .footer {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   background: #F6F6F2;
+  padding: 20px;
 }
